# building-agents

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  building-agents-series.v1.md  capture.py  pyproject.toml  requirements.txt  run.py
code/: .env.example  .gitignore  README.md  capture.py  pyproject.toml  run.py
code/episodes/01-loop/: README.md  agent.py
code/episodes/01-loop/initial/md2html/: parser.py
code/episodes/01-loop/initial/tests/fixtures/: code_blocks.html  headings.md  inline.html
code/episodes/02-tools/: README.md  agent.py  tools.py
code/episodes/02-tools/initial/: README.md
code/episodes/02-tools/initial/md2html/: lexer.py  parser.py  utils.py
code/episodes/02-tools/initial/md2html/extensions/: footnotes.py
code/episodes/02-tools/initial/tests/: test_parser.py
code/episodes/03-context/: README.md  agent.py  compaction.py
code/episodes/03-context/initial/: README.md
code/episodes/04-planning-reasoning/: README.md  agent.py
code/episodes/04-planning-reflection/: README.md  agent.py
code/episodes/04-planning-reflection/initial/: README.md
code/episodes/04-planning-reflection/initial/md2html/: renderer.py
code/episodes/04-planning-thinking/: planning.py
code/episodes/04-planning-thinking/initial/tests/: test_renderer.py
code/episodes/05-orchestration/: README.md  agent.py
code/episodes/05-orchestration/initial/: README.md
code/episodes/05-skills/: agent.py
code/episodes/06-orchestration/: agent.py
episodes/01-loop/initial/: pyproject.toml
episodes/01-loop/initial/tests/fixtures/: basic.md  inline.md  nested.html
eval/: README.md  agent.py  (+13 more)
(+157 files in other folders)
