[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agents-from-first-principles"
version = "0.1.0"
description = "Companion code for the 5-episode 'Agents from First Principles' video series produced by Clyep"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.50.0",
    "python-dotenv>=1.0.0",
    "tiktoken>=0.7.0",       # used from Ep 3 onward for compaction token counting
    "pytest>=8.0.0",         # the md2html test suite the agent invokes via bash
    "ruff>=0.6.0",           # the `lint` tool in Ep 5+'s verification skill
    "pytest-cov>=5.0.0",     # the `coverage` tool in Ep 5+'s verification skill
]

[tool.setuptools]
# No package code at the repo root — episodes are self-contained scripts, not a library.
py-modules = []
