[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "md2html"
version = "0.1.0"
description = "A small Markdown-to-HTML CLI tool with a three-stage pipeline (lexer / parser / renderer) and extensions."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8.0.0"]

[project.scripts]
md2html = "md2html.cli:main"

[tool.setuptools.packages.find]
include = ["md2html*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Make the in-tree md2html package importable without `pip install -e .`.
pythonpath = ["."]
